# sygnal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  sygnal.yaml.sample  tox.ini
.ci/scripts/: triage_labelled_issue.sh
.github/: dependabot.yml
.github/workflows/: changelog_check.yml  docker_check.yml  docker_push.yml  pipeline.yml  triage_incoming.yml  triage_labelled.yml  zizmor.yml
changelog.d/: 421.feature  423.feature  424.misc  425.doc.md  426.misc  427.misc  451.feature  452.misc  453.misc  454.removal  455.doc  456.misc  457.misc  458.misc  459.removal  467.misc  470.misc
docker/: Dockerfile
docs/: applications.md
scripts-dev/: lint.sh
sygnal/: __init__.py  apnspushkin.py  apnstruncate.py  exceptions.py  gcmpushkin.py  http.py  notifications.py  sygnal.py  utils.py  webpushpushkin.py
sygnal/helper/proxy/: __init__.py
tests/: test_apns.py  test_apnstruncate.py  test_concurrency_limit.py  test_gcm.py  test_http.py  test_httpproxy_asyncio.py  test_httpproxy_twisted.py  test_proxy_url_parsing.py  test_pushgateway_api_v1.py  testutils.py  twisted_test_helpers.py
tests/temporary/: __init__.py  test_webpush.py
